--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,5 +8,13 @@ dependencies {
 	api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
 	api "com.badlogicgames.gdx:gdx-bullet:$gdxVersion"
 	api "com.badlogicgames.gdx:gdx:$gdxVersion"
-	implementation "com.esotericsoftware.spine:spine-libgdx:4.1.0"
+	implementation "com.esotericsoftware.spine:spine-libgdx:$spineVersion"
+	api "com.github.payne911:PieMenu:$pieMenuVersion"
+	api "com.rafaskoberg.gdx:typing-label:$typingLabelVersion"
+	implementation "com.maltaisn:msdf-gdx:$msdfLabelVersion"
+	implementation "com.strongjoshua:libgdx-inGameConsole:$inGameConsoleVersion"
+	implementation "com.crashinvaders.vfx:gdx-vfx-core:$vfxVersion"
+	implementation "com.crashinvaders.vfx:gdx-vfx-effects:$vfxVersion"
+	implementation "space.earlygrey:shapedrawer:$shapedrawerVersion"
+	implementation "com.github.lyze237:gdx-TinyVG:f0213161cc"
 }
