--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,11 @@ box2dlightsVersion=1.5
 androidPluginVersion=7.0.4
 robovmVersion=2.3.16
 gdxVersion=1.11.0
+pieMenuVersion=5.0.0
+typingLabelVersion=1.3.0
+msdfLabelVersion=0.2.0
+inGameConsoleVersion=1.0.0
+vfxVersion=0.5.0
+shapedrawerVersion=2.6.0
+gdxTinyVGVersion=main-f0213161cc-1
+spineVersion=4.1.0
