--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,8 @@ apply plugin: 'com.android.application'
 
 
 android {
-	compileSdkVersion 30
+	compileSdkVersion 33
+	buildToolsVersion "33.0.0"
 	sourceSets {
 		main {
 			manifest.srcFile 'AndroidManifest.xml'
@@ -32,7 +33,7 @@ android {
 	defaultConfig {
 		applicationId 'effects.awesome'
 		minSdkVersion 19
-		targetSdkVersion 30
+		targetSdkVersion 33
 		versionCode 1
 		versionName "1.0"
 		multiDexEnabled true
